@@ -11,6 +11,7 @@ v0.07
 	* FIX : change current directory when opening a file
 	* FIX : surpress drawing artefact when creating a new segment
 	* FIX : avoid Qt to have to process download notifications recursively
+	* ADD : scripts to create the windows installation package
 
 v0.06 5 dec 2006 
 	* FIX : also recognize true/false for oneway tag
